--- a/go-web-app-chart/templates/deployment.yaml
+++ b/go-web-app-chart/templates/deployment.yaml
@@ -17,6 +17,6 @@ spec:
     spec:
       containers:
       - name: go-web-app
-        image: sandeepgow/myfirstgoapp:{{ .Values.image.tag }}
+        image: sandeepgow/myfirstgoapp:v1
         ports:
         - containerPort: 8080
